# BudgetBuddyBot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
docker/app/: Dockerfile
service/: classifier.py  config.py  main.py
service/bank_providers/: __init__.py  base.py  errors.py  revolut.py  swedbank.py
service/classifier/: keyword.py  ml.py
service/database/: core.py
service/database/models/: __init__.py  invite.py  transaction.py  user.py
service/handlers/: analytics.py  help.py  invitation.py  invite.py  report.py  start.py  upload.py
service/tests/: conftest.py  factories.py  test_models.py
service/tests/test_bank_providers/: conftest.py  test_revolut.py  test_swedbank.py
service/tests/test_handlers/: test_help.py  test_start.py
service/tests/test_models/: test_invite.py  test_transaction.py  test_user.py
