[tool.poetry]
name = "budgetbot"
version = "0.1.0"
description = ""
authors = ["Andrey Doroschenko <andrey.daraschenka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.15.0"
beanie = "1.27.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
