[tool.poetry]
name = "budgetbot"
version = "0.1.0"
description = ""
authors = ["Andrey Doroschenko <andrey.daraschenka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.15.0"
beanie = "1.27.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"

[tool.poetry.dev-dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.24.0"
pytest-factoryboy = "2.7.0"
factory-boy = "3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
